# pg-logstats

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  mise.toml
.buildkite/: pipeline.yml
.buildkite/scripts/: bootstrap.sh
.github/workflows/: ci.yml  release.yml
agents/: README.md  process.md  testing.md
agents/context/: README.md  living-notes.md  technical-domain.md
agents/personas/: builder.md  planner.md  reviewer.md  tester.md
demo/: README.md
demo/docker/: README.md  docker-compose.yml
demo/scripts/: cleanup.sh  docker-demo.sh  run-demo.sh  run-workload.sh  setup.sh
docs/: API.md  README.md  architecture.md  rds-cloudwatch.md
engg/: PHILOSOPHY.md  README.md
engg/adr/: 0001-ripgrep-inspired-cli-philosophy.md  0002-select-v1-investigation-workflows.md  README.md  template.md
engg/design/: README.md  implementation-plan.md  investigate-new-slow-queries.md  release-and-usability-plan.md
engg/investigations/: README.md  agent-workflow-value-layers.md  db-ops-service-engagement.md  first-workflow-candidates.md  pg-loggrep-llm-direction.md  slow-query-investigation-sources.md
engg/processes/: README.md  release.md
engg/reviews/: README.md
examples/: README.md  basic_usage.rs
examples/integration/: basic_usage.rs  batch_processing.sh  custom_parser.rs
examples/queries/: analysis_recipes.md  jq_patterns.md
src/: correlation.rs  events.rs  findings.rs  lib.rs  main.rs
src/analytics/: mod.rs  queries.rs  timing.rs
src/input/: cloudwatch.rs  file.rs  mod.rs
src/output/: json.rs  mod.rs  text.rs
src/parsers/: mod.rs  stderr.rs  text.rs
src/sql/: mod.rs  query.rs
tests/: README.md  cli.rs  integration_tests.rs
(+23 files in other folders)
